解析方法体中的语句获取，到方法中变量的全类型路径