@@ -34,6 +34,7 @@
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=lamia</arg>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=lamia</arg>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=lamia</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=lamia</arg>
                         <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm=lamia</arg>
                     </compilerArgs>
                 </configuration>
